--- a/package.json
+++ b/package.json
@@ -27,7 +27,19 @@
   },
   "homepage": "https://github.com/phorna/hw-app-nano-xro#readme",
   "publishConfig": {
-    "access": "public"
+    "access": "public"  
+  },
+  "main": "lib/index.js",
+  "scripts": {
+    "prepare": "npm run clean && npm run build",
+    "flow": "flow",
+    "clean": "rm -rf lib/",
+    "documentation": "documentation build src/index.js --project-name 'hw-app-nano-xro' --project-version `node -e \"console.log(require('./package.json').version)\"` --project-homepage https://github.com/phorna/hw-app-nano-xro -g -f html -o docs/",
+    "prettier": "prettier --write 'src/**/*.js'",
+    "prettier-diff": "prettier --list-different 'src/**/*.js'",
+    "lint": "eslint src",
+    "build": "babel --source-maps -d lib src && flow-copy-source -v src lib",
+    "watch": "babel --watch --source-maps -d lib src & flow-copy-source -w -v src lib"
   },
   "dependencies": {
     "@ledgerhq/hw-transport": "^4.61.0",
