--- a/.github/workflows/npm-publish_test.yml
+++ b/.github/workflows/npm-publish_test.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm install --package-lock-only
       - run: npm ci
       - run: npm test
 
