--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - run: npm npm uninstall -g hw-app-nano-xro
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
